--- a/desafiocordel/style.css
+++ b/desafiocordel/style.css
@@ -1,4 +1,4 @@
-@charset ;
+@charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 
@@ -62,6 +62,9 @@ section {
 section#verso2 {
     background-image: url(imagens/background001.jpg);
     background-position: center center;
+    background-size: cover;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.445);
+    background-attachment: fixed;
 }
 
 section#verso2 > p {
@@ -75,7 +78,9 @@ section#verso2 > p {
 section#verso5 {
     background-image: url(imagens/background002.jpg);
     background-position: right center;
-    
+    background-size: cover;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.445);
+    background-attachment: fixed;
 }
 
 section#verso5 > p{
@@ -83,6 +88,7 @@ section#verso5 > p{
     color: white;
     display: inline-block;
     padding: 0px 10px 30px 10px;
+    text-shadow: 2px 2px 0px black;
 }
 
 footer {
